welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: not found: value ado
	if (ado(a)==true) {
            ^countTeen:6: error: not found: value ado
		if (ado(b)==true) {
                    ^countTeen:9: error: not found: value ado
		if (ado(c)==true) {
                    ^countTeen:12: error: not found: value ado
		if (ado(d)==true) {
                    ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
		nbado = nbado + 1
                      ^countTeen:12: error: type mismatch;
 found   : Unit
 required: Int
		if (ado(d)==true) {
                ^